rename spectra to samples, spectrum_files to spectra
