# app/controllers/api/v1/spectra_controller.rb
@@ -1,17 +1,0 @@
-# frozen_string_literal: true
-
-module Api
-  module V1
-    class SpectraController < ApiController
-      def index
-        @spectra = Spectrum.all
-        render json: @spectra
-      end
-
-      def show
-        @spectrum = Spectrum.find_by(id: params[:id]) or not_found
-        render json: @spectrum
-      end
-    end
-  end
-end
