# config/routes.rb
@@ -15,7 +15,7 @@ Rails.application.routes.draw do
   draw :api
 
   scope '(:locale)', locale: /#{I18n.available_locales.join('|')}/ do
-    resources :spectra
+    resources :samples
 
     resources :users, only: %i[show] do
       member do
